--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -1,10 +1,14 @@
-.footerFixed{
-    min-height: 100vh; /* ←コンテンツの高さの最小値＝ブラウザの高さに指定 */
-    position: relative;/* ←相対位置 */
-    padding-bottom: 60px; /* ←フッターの高さを指定 */
+.footerFixed {
+    min-height: 100vh;
+    /* ←コンテンツの高さの最小値＝ブラウザの高さに指定 */
+    position: relative;
+    /* ←相対位置 */
+    padding-bottom: 60px;
+    /* ←フッターの高さを指定 */
     box-sizing: border-box;
     /* ↑ヘッダーやフッターを含むすべての要素の高さ＝min-height:100vhになるように指定 */
 }
+
 #header {
     padding-top: 0px;
     margin: 0 auto;
@@ -14,12 +18,15 @@
 a {
     text-decoration: none;
 }
-a:link, a:visited ,a:active{
+
+a:link, a:visited, a:active {
     color: black;
 }
+
 a:hover {
     color: rgb(36, 104, 147);
 }
+
 #titleber {
     padding: 1px;
     margin: 0 auto;
@@ -28,7 +35,7 @@ a:hover {
 }
 
 #titleber a {
-    font-family:HiraMinProN-W6;
+    font-family: HiraMinProN-W6;
 }
 
 .wrapper {
@@ -64,7 +71,7 @@ a:hover {
 
 .main {
     background: rgba(255, 255, 255, 0.5);
-    
+
     top: 20%;
     display: inline-block;
     padding: 20px;
@@ -75,60 +82,70 @@ a:hover {
     text-align: center;
 }
 
-.main_b{
+.main_b {
     text-align: left;
 }
+
 #footer {
     bottom: 0;
-    position: absolute;/* ←絶対位置 */
+    position: absolute;
+    /* ←絶対位置 */
     width: 100%;
     height: 85px;
     background-color: #EDEDEB;
     text-align: center;
 }
-.top{
+
+.top {
     top: 30px;
 }
+
 .footer_html {
     float: left;
     margin-left: 10px;
     margin-top: 30px;
 }
-.footer_css{
+
+.footer_css {
     float: left;
     margin-left: 10px;
     margin-top: 30px;
 }
-.footer_css2{
+
+.footer_css2 {
     float: left;
     margin-left: 10px;
     margin-top: 30px;
 }
-address{
+
+address {
     float: right;
     margin-right: 10px;
     margin-top: 60px;
 }
-.items{
+
+.items {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.items:after{
-    content:"";
-    display:block;
+
+.items:after {
+    content: "";
+    display: block;
     width: 32%;
-    height:0;
-}
-.item {
-    box-sizing: border-box;
-    border:2px solid #ccc;
-    margin-bottom: 20px;
-    padding: 20px;
-    width:32%;
+    height: 0;
 }
 
-.img_wrap{
+.item {
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    margin-bottom: 20px;
+    padding: 20px;
+    width: 32%;
+}
+
+.img_wrap {
     border: 1px solid #ddd;
     width: 400px;
     max-width: 100%;
@@ -136,14 +153,46 @@ address{
     margin: 0 auto;
     overflow: hidden;
     cursor: pointer;
-  }
-  .img_wrap img{
+}
+
+.img_wrap img {
     width: 100%;
     cursor: pointer;
     transition-duration: 0.5s;
-  }
-  .img_wrap:hover img{
+}
+
+.img_wrap:hover img {
     opacity: 0.6;
     transform: scale(1.2);
     transition-duration: 0.5s;
-  }
+}
+
+/* ボタン全体の装飾 */
+.flowbtn4 {
+    font-family: 'Trebuchet MS', sans-serif;
+    /* 好きなフォントに変えてね */
+    border-radius: 50%;
+    display: inline-block;
+    width: 70px;
+    height: 70px;
+    font-size: 30px;
+    transition: .5s;
+    text-decoration: none;
+}
+
+/* ボタンマウスホバー時テキストカラー */
+.flowbtn4:hover {
+    color: #fff !important;
+}
+
+/* Twitter */
+.flowbtn4.fl_tw2 {
+    border: solid 1px #55acee;
+    color: #55acee;
+}
+
+/* Twitterマウスホバー時 */
+.flowbtn4.fl_tw2:hover {
+    border: solid 1px #55acee;
+    background: #55acee;
+}
