--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -167,32 +167,49 @@ address {
     transition-duration: 0.5s;
 }
 
-/* ボタン全体の装飾 */
-.flowbtn4 {
-    font-family: 'Trebuchet MS', sans-serif;
-    /* 好きなフォントに変えてね */
-    border-radius: 50%;
-    display: inline-block;
-    width: 70px;
-    height: 70px;
-    font-size: 30px;
-    transition: .5s;
-    text-decoration: none;
-}
-
-/* ボタンマウスホバー時テキストカラー */
-.flowbtn4:hover {
-    color: #fff !important;
-}
-
-/* Twitter */
-.flowbtn4.fl_tw2 {
-    border: solid 1px #55acee;
-    color: #55acee;
-}
-
-/* Twitterマウスホバー時 */
-.flowbtn4.fl_tw2:hover {
-    border: solid 1px #55acee;
-    background: #55acee;
-}
+/* ボタン全体 */
+.flowbtn6{
+    border-radius:13px;		
+    position:relative;
+    display:inline-block;
+    width:50px;
+    height:50px;
+    font-size:33px;
+    color:#fff!important;
+    transition:.5s;
+    text-decoration:none;
+    }	
+    /* アイコンをど真ん中に*/
+    .flowbtn6 i{
+    position:absolute;
+    top:50%;
+    left:50%;
+    -ms-transform:translate(-50%,-50%);
+    -webkit-transform:translate(-50%,-50%);
+    transform:translate(-50%,-50%);
+    }
+    /* ulタグの内側余白を０にする */
+    ul.snsbtniti{
+    padding:0!important;
+    }
+    /* アイコンボタン全体の位置 */
+    .snsbtniti{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
+    }
+    /* アイコンボタン同士の余白 */
+    .snsbtniti li{
+    flex:0 0 33%;
+    text-align:center!important;
+    }
+    /* アイコンボタンにマウスを乗せた時 */
+    .flowbtn6:hover{
+    -webkit-transform:translateY(-5px);
+    -ms-transform:translateY(-5px);
+    transform:translateY(-5px);
+    }
+    /* Twitter */
+    .fl_tw1{
+    background:#55acee;
+    }
