--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -61,13 +61,65 @@ a:hover {
 .about {
     text-align: center;
 }
-.product {
+
+h2 {
+    text-align: center;
+}
+h1 {
     text-align: center;
 }
 
-.works {
+.product {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 30px 4%;
+}
+.main_article{
+    max-width: 450px;
+    margin: 40px auto;
+}
+.img_wrap_center{
     text-align: center;
 }
+
+.card-container {
+    display: grid; /* カードの横並び */
+    grid-template-columns: repeat(auto-fit, minmax(342px, 1fr)); /* gridの設定 */
+    gap: 20px 30px; /* カード同士の隙間 縦方向 横方向 */
+    margin: 109px auto 0;
+    text-align: start; /* カード内の中央寄せ解除 */
+}
+ 
+.card-item {
+    width: 100%;
+    max-width: 342px;
+    margin: 0 auto;
+    padding: 40px 40px 35px;
+    background-color: #ffffff;
+}
+ 
+.card-img {
+    width: 100%;
+    max-width: 310px;
+    height: auto; 
+    vertical-align: bottom; /* 画像の下の余白を埋める */
+}
+ 
+.card-tit {
+    margin-top: 20px;
+    color: #6F7579;
+    font-size: 20px;
+    line-height: 1.2;
+}
+ 
+.card-item p {
+    margin-top: 20px;
+    color: #6F7579;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+
 .link{
     text-align: center;
 }
