--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -84,7 +84,7 @@ h1 {
 
 .card-container {
     display: grid; /* カードの横並び */
-    grid-template-columns: repeat(auto-fit, minmax(342px, 1fr)); /* gridの設定 */
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr)); /* gridの設定 */
     gap: 20px 30px; /* カード同士の隙間 縦方向 横方向 */
     margin: 109px auto 0;
     text-align: start; /* カード内の中央寄せ解除 */
@@ -92,14 +92,14 @@ h1 {
  
 .card-item {
     width: 100%;
-    max-width: 342px;
+    max-width: 350px;
     margin: 0 auto;
     padding: 40px 40px 35px;
     background-color: #ffffff;
 }
  
 .card-img {
-    width: 100%;
+    width: 150%;
     max-width: 310px;
     height: auto; 
     vertical-align: bottom; /* 画像の下の余白を埋める */
@@ -107,14 +107,14 @@ h1 {
  
 .card-tit {
     margin-top: 20px;
-    color: #6F7579;
+    color: #000000;
     font-size: 20px;
     line-height: 1.2;
 }
  
 .card-item p {
     margin-top: 20px;
-    color: #6F7579;
+    color: #000000;
     font-size: 16px;
     line-height: 1.5;
 }
